style.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
}
canvas {
  display: block;
}

main {
  height: 100%;
}

/*Index*/

.container {
  width: 100%;
  height: 100%;
}

h1 {
  font-family: "Open Sans", sans-serif;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 24px;
  background-color: white;
  color:black;
  z-index: 1;
  border: 3px solid;
  padding: 0.25em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
}

.left-text {
  font-family: "Open Sans", sans-serif;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 12px;
  background-color: white;
  color:black;
  z-index: 1;
  border: 3px solid;
  padding: 0.25em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
  width: fit-content;

}

#b1 {
  position: absolute;
  right: 40%;
  top: 70%;
}

#b2 {
  position: absolute;
  right: 50%;
}

#b3 {
  position: absolute;
  right: 20%;
  top: 70%;
}

.cal {
  position: absolute;
  top: 42%;
  left: 65%;
  height: 100px;
  width: 200px;
}
.book-links {
  position: absolute;
  top: 42%;
  left: 35%;
  height: 100px;
  width: 150px;
}

.text-container {
  position: absolute;
  height: 100%;
  width: 30%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  margin: 1%;
}

/*.index-bookmark {
  font-family: "Open Sans", sans-serif;
  font-size: 10px;
  letter-spacing: 2px;
  background-color: white;
  text-decoration: none;
  text-transform: uppercase;
  color: #000;
  border: 3px solid;
  padding: 0.25em 0.5em;
  margin-left: 1%;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
}*/

.plant-links {
  position: absolute;
  top: 65%;
  left: 45%;
  height: 100px;
  width: 150px;

}

/*Bookshelf*/

a {
  text-decoration: none;
  color: #000;
}

a:visited {
  text-decoration: none;
  color: #000;
}

.book-left {
    float: left;
    width: 12%;
    height: 50%;
      padding-left: 6%;
      padding-top: 4%;
      position: relative;
      -webkit-transform: rotate(6deg) skew(6deg, 0);
         -moz-transform: rotate(6deg) skew(6deg, 0);
          -ms-transform: rotate(6deg) skew(6deg, 0);
           -o-transform: rotate(6deg) skew(6deg, 0);
              transform: rotate(6deg) skew(6deg, 0);
              z-index: 1;
    
  }

  .book-right{
    float: right;
    padding-right: 9%;
    padding-left: 1%;
    padding-top: 4%;
    width: 10%;
    height: 50%;
      display: inline-block;
      margin-top: 1em;
      position: relative;
      -webkit-transform: rotate(-6deg) skew(-6deg, 0);
         -moz-transform: rotate(-6deg) skew(-6deg, 0);
          -ms-transform: rotate(-6deg) skew(-6deg, 0);
           -o-transform: rotate(-6deg) skew(-6deg, 0);
              transform: rotate(-6deg) skew(-6deg, 0);
              z-index: 1;
  }

 .button-54 {
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    letter-spacing: 2px;
    background-color: white;
    text-decoration: none;
    text-transform: uppercase;
    color: #000;
    cursor: pointer;
    border: 3px solid;
    padding: 0.25em 0.5em;
    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
    position: relative;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
  }

  .back-link {
    font-family: "Open Sans", sans-serif;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 24px;
    background-color: white;
    color:black;
    position: absolute;
    margin: 1%;
    border: 3px solid;
    padding: 0.25em 0.5em;
    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
    width: min-content;
  }

  .bs-text-container {
    position: absolute;
    height: 100%;
    width: 15%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    margin: 1%;
  }

  /*Plant.html*/
 

